--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                   <p class="text-gray-500 mt-1">Sistema de Control Financiero Zonal</p>
                   <div
                     class="mt-2 inline-flex items-center px-3 py-1 rounded-full bg-blue-100 text-blue-800 text-xs font-medium">
-                      <i class="fas fa-shield-alt mr-2">v2.0 Pro
-                          </div>
+                      <i class="fas fa-shield-alt mr-2"></i>v2.0 Pro
+                      </div>
                   </div>
               <form id="loginForm" class="space-y-6">
                   <div>
@@ -141,20 +141,20 @@
                           <input type="password" id="tokenInput" required
                             class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
                             placeholder="Ingresa tu token de seguridad">
-                          <i class="fas fa-key absolute left-3 top-3.5 text-gray-400">
-                              </div>
+                          <i class="fas fa-key absolute left-3 top-3.5 text-gray-400"></i>
+                          </div>
                       <p class="text-xs text-gray-500 mt-2">Contacta al administrador si no tienes un token.</p>
                       </div>
                   <button type="submit" id="loginBtn"
                     class="w-full bg-gradient-to-r from-blue-600 to-blue-700 text-white py-3 rounded-xl font-semibold hover:from-blue-700 hover:to-blue-800 transition transform hover:scale-\[1.02] shadow-lg">
                       <span>Iniciar Sesión</span>
-                      <i class="fas fa-arrow-right ml-2">
-                          </button>
+                      <i class="fas fa-arrow-right ml-2"></i>
+                      </button>
                   <div id="loginError"
                     class="hidden bg-red-50 border border-red-200 text-red-700 px-4 py-3 rounded-lg text-sm">
-                      <i class="fas fa-exclamation-circle mr-2">
-                          <span id="loginErrorText">Token inválido</span>
-                          </div>
+                      <i class="fas fa-exclamation-circle mr-2"></i>
+                      <span id="loginErrorText">Token inválido</span>
+                      </div>
                   </form>
               <div class="mt-8 pt-6 border-t border-gray-200 text-center">
                   <p class="text-xs text-gray-400">Zona de Sonsonate • Coordinación Paracentral</p>
